--- a/GeoQuiz/mainpage.html
+++ b/GeoQuiz/mainpage.html
@@ -5,11 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>GeoQuiz</title>
   <link rel="stylesheet" href="global.css">
-  <link rel="stylesheet" href="mainpage.css">
+  <link id="changeTheme" rel="stylesheet" href="mainpage.css">
   <link rel="stylesheet" href="colors.css">
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
 </head>
 
@@ -22,6 +23,21 @@
       <div class="home">
         <i class="bi bi-house-door-fill"><a href="mainpage.html" class="homebutton">Home</a></i>
       </div>
+      <div class="toggle-theme">
+        <div class="moon">
+          <i class="fas fa-moon"></i>
+        </div>
+        <div class="toggle-switch">
+          <input type="checkbox" id="toggle" class="toggle-input">
+          <label for="toggle" class="toggle-label">
+          </label>
+
+        </div>
+        <div class="sun">
+          <i class="fas fa-sun"></i>
+        </div>
+      </div>
+
       <div class="dropdown">
         <span data-i18n="mainPage.language" class="dropdown-title">Language</span>
         <div class="dropdown-content">
