--- a/GeoQuiz/quiz-card.html
+++ b/GeoQuiz/quiz-card.html
@@ -4,38 +4,93 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GeoQuiz</title>
+    <link rel="stylesheet" href="colors.css">
+    <link rel="stylesheet" href="global.css">
     <link rel="stylesheet" href="quiz-card.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
 <body>
-    <div class="quiz-card">
-        <h2 id="question"></h2>
-        <form id="options-form">
-            <label>
-                <input type="radio" name="option" value="option1">
-                <span id="option1"></span>
-            </label>
-            <br>
-            <label>
-                <input type="radio" name="option" value="option2">
-                <span id="option2"></span>
-            </label>
-            <br>
-            <label>
-                <input type="radio" name="option" value="option3">
-                <span id="option3"></span>
-            </label>
-            <br>
-            <label>
-                <input type="radio" name="option" value="option4">
-                <span id="option4"></span>
-            </label>
-        </form>
-        <button id="submitBtn" onclick="submitAnswer()">Submit</button>
-        <button id="reloadBtn" style="display: none;" onclick="startNewQuiz()">Start New Quiz</button>
-        <p id="score">Score: 0</p>
-        <p id="score-summary"></p>
+    <nav class="navbar">
+        <div class="navbar-left">
+            <img src="geo-logo.png" alt="Logo" class="logo">
+        </div>
+        <div class="navbar-right">
+            <div class="home">
+                <i class="bi bi-house-door-fill"><a href="mainpage.html" class="homebutton">Home</a></i>
+            </div>
+            <div class="toggle-theme">
+                <div class="moon">
+                    <i class="fas fa-moon"></i>
+                </div>
+                <div class="toggle-switch">
+
+                    <input type="checkbox" id="toggle" class="toggle-input">
+                    <label for="toggle" class="toggle-label">
+                    </label>
+
+                </div>
+                <div class="sun">
+                    <i class="fas fa-sun"></i>
+                </div>
+            </div>
+
+            <div class="dropdown">
+                <span data-i18n="mainPage.language" class="dropdown-title">Language</span>
+                <div class="dropdown-content">
+                    <a href="#" data-i18n="mainPage.language" onclick="changeLanguage('en')">English</a>
+                    <a href="#" onclick="changeLanguage('ro')">Romanian</a>
+                </div>
+            </div>
+            <div class="user-info">
+                <span class="score">Score:</span>
+                <a href="LogIn-Form.html" class="nav-link" id="signin">Sign In</a>
+                <a href="SignUp-Form.html" class="nav-link">Sign Up</a>
+            </div>
+        </div>
+    </nav>
+
+    <div class="content">
+        <a href="mainpage.html" class="back-button">
+            &#8592; <!-- HTML Entity for left arrow -->
+        </a>
+
+        <div class="quiz-card">
+            <h2 id="question"></h2>
+            <form id="options-form">
+                <label>
+                    <input type="radio" name="option" value="option1">
+                    <span id="option1"></span>
+                </label>
+                <br>
+                <label>
+                    <input type="radio" name="option" value="option2">
+                    <span id="option2"></span>
+                </label>
+                <br>
+                <label>
+                    <input type="radio" name="option" value="option3">
+                    <span id="option3"></span>
+                </label>
+                <br>
+                <label>
+                    <input type="radio" name="option" value="option4">
+                    <span id="option4"></span>
+                </label>
+            </form>
+            <button id="submitBtn" class="quiz-button" onclick="submitAnswer()">Submit</button>
+            <button id="reloadBtn" class="quiz-button" style="display: none;" onclick="startNewQuiz()">Start New
+                Quiz</button>
+            <p id="score">Score: 0</p>
+            <p id="score-summary"></p>
+        </div>
     </div>
+    <a href="#" class="reload-button" onclick="reloadPage()">
+        &#8635; <!-- HTML Entity for circular arrow -->
+    </a>
+
 
     <script src="quiz-card.js"></script>
 </body>
