--- a/GeoQuiz/LogIn-Form.html
+++ b/GeoQuiz/LogIn-Form.html
@@ -3,12 +3,51 @@
 
 <head>
     <title>Login Form</title>
-    <link rel="stylesheet" href="login-styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link id="loginTheme" rel="stylesheet" href="login-styles.css">
     <link rel="stylesheet" href="global.css">
     <link rel="stylesheet" href="colors.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
 <body>
+    <nav class="navbar">
+        <div class="navbar-left">
+            <img src="geo-logo.png" alt="Logo" class="logo">
+        </div>
+        <button class="hamburger" onclick="toggleMenu()"><i class="fas fa-bars"></i></button>
+        <div class="navbar-right" id="navbarRight">
+            <div class="toggle-theme">
+                <div class="moon">
+                    <i class="fas fa-moon"></i>
+                </div>
+                <div class="toggle-switch">
+                    <input type="checkbox" id="toggle" class="toggle-input">
+                    <label for="toggle" class="toggle-label">
+                    </label>
+
+                </div>
+                <div class="sun">
+                    <i class="fas fa-sun"></i>
+                </div>
+            </div>
+
+            <div class="dropdown">
+                <span data-i18n="signIn.language" class="dropdown-title"></span>
+                <div class="dropdown-content">
+                    <a href="#" data-i18n="signIn.language.english" onclick="changeLanguage('en')"></a>
+                    <a href="#" onclick="changeLanguage('ro')" data-i18n="signIn.language.romanian"></a>
+                </div>
+            </div>
+            <div class=" user-info">
+                <a href="LogIn-Form.html" class="nav-link" id="signin" data-i18n="signIn.signIn"></a>
+                <a href="SignUp-Form.html" data-i18n="signIn.signUp" class="nav-link"></a>
+            </div>
+        </div>
+    </nav>
     <div class="container-login">
         <form class="login-form" id="loginForm">
             <h2 class="login-title">LogIn</h2>
