--- a/GeoQuiz/SignUp-Form.html
+++ b/GeoQuiz/SignUp-Form.html
@@ -3,13 +3,55 @@
 
 <head>
     <title>Sign Up Form</title>
-    <link rel="stylesheet" href="signup-styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link rel="stylesheet" href="global.css">
     <link rel="stylesheet" href="colors.css">
-
+    <link id="signupTheme" rel="stylesheet" href="signup-styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
 <body>
+    <nav class="navbar">
+        <div class="navbar-left">
+            <img src="geo-logo.png" alt="Logo" class="logo">
+        </div>
+        <button class="hamburger" onclick="toggleMenu()"><i class="fas fa-bars"></i></button>
+        <div class="navbar-right" id="navbarRight">
+            <div class="home">
+                <i class="bi bi-house-door-fill"><a href="mainpage.html" class="homebutton">Home</a></i>
+            </div>
+            <div class="toggle-theme">
+                <div class="moon">
+                    <i class="fas fa-moon"></i>
+                </div>
+                <div class="toggle-switch">
+                    <input type="checkbox" id="toggle" class="toggle-input">
+                    <label for="toggle" class="toggle-label">
+                    </label>
+
+                </div>
+                <div class="sun">
+                    <i class="fas fa-sun"></i>
+                </div>
+            </div>
+
+            <div class="dropdown">
+                <span data-i18n="mainPage.language" class="dropdown-title">Language</span>
+                <div class="dropdown-content">
+                    <a href="#" data-i18n="mainPage.language" onclick="changeLanguage('en')">English</a>
+                    <a href="#" onclick="changeLanguage('ro')">Romanian</a>
+                </div>
+            </div>
+            <div class=" user-info">
+                <span class="score">Score:</span>
+                <a href="LogIn-Form.html" class="nav-link" id="signin">Sign In</a>
+                <a href="SignUp-Form.html" class="nav-link">Sign Up</a>
+            </div>
+        </div>
+    </nav>
     <div class="container-signup">
         <form class="signup-form" id="signupForm">
             <h2 class="signup-title">Sign Up</h2>
