--- a/GeoQuiz/mainpage.html
+++ b/GeoQuiz/mainpage.html
@@ -43,11 +43,15 @@
         </div>
       </div>
       <div class="user-info">
-        <span class="score" data-i18n="mainPage.navScore"></span>
-        <span class="score-value"></span>
-        <span id="userNavItem" class="nav-link" data-i18n="mainPage.welcome">Welcome, ${username}</span>
-        <span id="userName" class="nav-link"></span>
-        <a href="LogIn-Form.html" class="nav-link">Log Out</a>
+        <span class="span-score">
+          <span class="score" data-i18n="mainPage.navScore"></span>
+          <span class="score-value"></span>
+        </span>
+        <span class="user-welcome">
+          <span id="userNavItem" class="nav-link" data-i18n="mainPage.welcome"></span>
+          <span id="userName" class="link-welcome"></span>
+        </span>
+        <a href="LogIn-Form.html" class="nav-link" data-i18n="mainPage.logout"></a>
 
       </div>
     </div>
